syntax = "proto3";
option go_package ="/";
package proto;


message StreamPoint{
  string name = 1;
  int32 value = 2;
}


message StreamRequest {
  StreamPoint pt = 1;
}


message StreamResponse {
  StreamPoint pt = 1;
}

/*

List：服务器端流式 RPC
Record：客户端流式 RPC
Route：双向流式 RPC

*/

service StreamService {
  rpc list(StreamRequest) returns (stream StreamResponse) {}
  rpc Record(stream StreamRequest) returns (StreamResponse) {};
  rpc Route(stream StreamRequest) returns (stream StreamResponse) {};
}

